--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "json-server": "json-server --port 4300 --watch db/data.json"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +20,13 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@types/jquery": "^3.5.1",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
+    "sweetalert": "^2.1.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
